[dyad] Transformando LojaRápida em produto profissional para Moçambique - wrote 15 file(s)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dyad-generated-app</title>
-  </head>
+<html lang="pt-MZ">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LojaRápida - O Marketplace de Moçambique | Compre e Venda Online</title>
+  <meta name="description" content="LojaRápida é o maior marketplace de Moçambique. Compre e venda produtos em todo o país. Entrega rápida, pagamento seguro e as melhores ofertas em Maputo, Matola, Beira e mais." />
+  <meta name="keywords" content="marketplace Moçambique, comprar online Maputo, vender online Moçambique, LojaRápida, e-commerce Moçambique, shopping online Maputo" />
+  <meta name="author" content="LojaRápida" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lojarapida.co.mz/" />
+  <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
+  <meta property="og:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
+  <meta property="og:image" content="/logo.svg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://lojarapida.co.mz/" />
+  <meta property="twitter:title" content="LojaRápida - O Marketplace de Moçambique" />
+  <meta property="twitter:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
+  <meta property="twitter:image" content="/logo.svg" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
+  
+  <!-- Geolocation -->
+  <meta name="geo.region" content="MZ" />
+  <meta name="geo.placename" content="Maputo" />
+  <meta name="geo.position" content="-25.9692;32.5732" />
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
