[dyad] Criação de um novo logo SVG para a LojaRápida e atualização das tags de favicon no index.html. - wrote 2 file(s)

--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
   <meta property="og:url" content="https://lojarapida.co.mz/" />
   <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="og:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
-  <meta property="og:image" content="/logo.svg" />
+  <meta property="og:image" content="/og-image.jpg" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://lojarapida.co.mz/" />
   <meta property="twitter:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="twitter:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
-  <meta property="twitter:image" content="/logo.svg" />
+  <meta property="twitter:image" content="/og-image.jpg" />
   
-  <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/favicon.ico" />
+  <!-- Favicon Assets (Gerar a partir do SVG e salvar na pasta public/) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="manifest" href="/site.webmanifest">
   
   <!-- Geolocation -->
   <meta name="geo.region" content="MZ" />
