[dyad] Otimização final de performance e integração de ativos de branding (favicon e meta tags de tema). - wrote 4 file(s)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="manifest" href="/site.webmanifest">
   
+  <!-- Branding e Tema para Mobile -->
+  <meta name="theme-color" content="#00D4AA" />
+  <meta name="msapplication-TileColor" content="#0A2540" />
+  
   <!-- Geolocation -->
   <meta name="geo.region" content="MZ" />
   <meta name="geo.placename" content="Maputo" />
