[dyad] Adicionando o script do Google Analytics (GA4) ao index.html. - wrote 1 file(s)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <meta name="author" content="LojaRápida" />
   <meta name="robots" content="index, follow" />
   
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZ38C7MF5P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DZ38C7MF5P');
+  </script>
+  
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lojarapida.co.mz/" />
