--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lojarapida.co.mz/" />
+  <meta property="og:url" content="https://lojarapidamz.com/" />
   <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="og:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
   <meta property="og:image" content="/og-image.jpg" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://lojarapida.co.mz/" />
+  <meta property="twitter:url" content="https://lojarapidamz.com/" />
   <meta property="twitter:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="twitter:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
   <meta property="twitter:image" content="/og-image.jpg" />
