[dyad] Adicionando favicon SVG personalizado - wrote 2 file(s)

--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
   <meta property="twitter:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
   <meta property="twitter:image" content="/og-image.jpg" />
   
-  <!-- Favicon Assets (Gerar a partir do SVG e salvar na pasta public/) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <!-- REMOVIDO: <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
-  <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicon Assets (SVG Moderno) -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   
   <!-- Branding e Tema para Mobile -->
   <meta name="theme-color" content="#00D4AA" />
