--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
   <meta property="og:url" content="https://lojarapidamz.com/" />
   <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="og:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
+  <meta property="og:image" content="https://lojarapidamz.com/og-image.jpg" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://lojarapidamz.com/" />
   <meta property="twitter:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="twitter:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
+  <meta property="twitter:image" content="https://lojarapidamz.com/og-image.jpg" />
   
   <!-- Favicon Assets Completos -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
