[dyad] wrote 2 file(s)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="og:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
   <meta property="og:image" content="https://lojarapidamz.com/og-image.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/jpeg" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
