[dyad] wrote 2 file(s)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:url" content="https://lojarapidamz.com/" />
   <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="og:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
-  <meta property="og:image" content="https://lojarapidamz.com/og-image.jpg" />
+  <meta property="og:image" content="https://lojarapidamz.com/og-image.jpeg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:type" content="image/jpeg" />
@@ -34,7 +34,7 @@
   <meta property="twitter:url" content="https://lojarapidamz.com/" />
   <meta property="twitter:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="twitter:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
-  <meta property="twitter:image" content="https://lojarapidamz.com/og-image.jpg" />
+  <meta property="twitter:image" content="https://lojarapidamz.com/og-image.jpeg" />
   
   <!-- Favicon Assets Completos -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
