--- a/index.html
+++ b/index.html
@@ -20,21 +20,10 @@
   </script>
   
   <!-- Open Graph / Facebook (Fallback Genérico) -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lojarapidamz.com/" />
-  <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
-  <meta property="og:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
-  <meta property="og:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:image:type" content="image/jpeg" />
+  <!-- Estas tags serão injetadas dinamicamente pelo React Helmet -->
   
   <!-- Twitter (Fallback Genérico) -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://lojarapidamz.com/" />
-  <meta property="twitter:title" content="LojaRápida - O Marketplace de Moçambique" />
-  <meta property="twitter:description" content="Compre e venda produtos em todo Moçambique. Entrega rápida e pagamento seguro." />
-  <meta property="twitter:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
   
   <!-- Favicon Assets Completos -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
