--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
   </script>
   
   <!-- Open Graph / Facebook (Fallback Genérico) -->
-  <!-- Estas tags serão injetadas dinamicamente pelo React Helmet -->
+  <!-- Estas tags serão substituídas dinamicamente pelo React Helmet para páginas específicas -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
+  <meta property="og:description" content="Compre e venda produtos online com segurança, pagamento na entrega e frete grátis para todo o país." />
+  <meta property="og:url" content="https://lojarapidamz.com/" />
+  <meta property="og:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   
   <!-- Twitter (Fallback Genérico) -->
   <meta property="twitter:card" content="summary_large_image" />
