--- a/index.html
+++ b/index.html
@@ -20,17 +20,10 @@
   </script>
   
   <!-- Open Graph / Facebook (Fallback Genérico) -->
-  <!-- Estas tags serão substituídas dinamicamente pelo React Helmet para páginas específicas -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
-  <meta property="og:description" content="Compre e venda produtos online com segurança, pagamento na entrega e frete grátis para todo o país." />
-  <meta property="og:url" content="https://lojarapidamz.com/" />
-  <meta property="og:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <!-- Estas tags foram removidas para evitar que o Facebook leia a URL canônica da homepage antes do JS ser executado. -->
   
   <!-- Twitter (Fallback Genérico) -->
-  <meta property="twitter:card" content="summary_large_image" />
+  <!-- Removido para evitar conflito. -->
   
   <!-- Favicon Assets Completos -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
