[dyad] wrote 7 file(s), executed 1 SQL queries

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
   </script>
   
   <!-- Open Graph / Facebook (Fallback Genérico) -->
-  <!-- Estas tags foram removidas para evitar que o Facebook leia a URL canônica da homepage antes do JS ser executado. -->
+  <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
+  <meta property="og:description" content="Compre e venda com segurança. Entrega rápida e pagamento na entrega em todo Moçambique." />
+  <meta property="og:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
+  <meta property="og:url" content="https://lojarapidamz.com/" />
+  <meta property="og:type" content="website" />
   
   <!-- Twitter (Fallback Genérico) -->
-  <!-- Removido para evitar conflito. -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
   
   <!-- Favicon Assets Completos -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
