[dyad] Correção de Favicon (SVG) - wrote 2 file(s)

--- a/index.html
+++ b/index.html
@@ -19,24 +19,26 @@
     gtag('config', 'G-DZ38C7MF5P');
   </script>
   
-  <!-- Open Graph / Facebook (Fallback Genérico) -->
+  <!-- Open Graph / Facebook -->
   <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="og:description" content="Compre e venda com segurança. Entrega rápida e pagamento na entrega em todo Moçambique." />
-  <meta property="og:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
+  <meta property="og:image" content="https://lojarapidamz.com/og-image.jpg" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lojarapidamz.com" />
   
-  <!-- Twitter (Fallback Genérico) -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://images.unsplash.com/photo-1556740738-b6a63e27c4df?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1200&h=630&fit=crop" />
+  <meta name="twitter:image" content="https://lojarapidamz.com/og-image.jpg" />
   
-  <!-- Favicon Assets Completos -->
+  <!-- Favicons e Ícones - Configuração Otimizada -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="alternate icon" href="/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00d4aa">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="mask-icon" href="/favicon.svg" color="#0a2540">
+  
   <meta name="msapplication-TileColor" content="#0a2540">
   <meta name="theme-color" content="#ffffff">
   
@@ -45,11 +47,11 @@
   <meta name="geo.placename" content="Maputo" />
   <meta name="geo.position" content="-25.9692;32.5732" />
 
-  <!-- Otimização de Carregamento de CSS (Non-blocking) -->
+  <!-- Otimização de Carregamento de CSS -->
   <link rel="preload" href="/src/globals.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="/src/globals.css"></noscript>
   
-  <!-- Otimização de Conexão para Supabase (Reduzindo latência da API) -->
+  <!-- Otimização de Conexão -->
   <link rel="preconnect" href="https://bpzqdwpkwlwflrcwcrqp.supabase.co">
 </head>
 
