--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://lojarapidamz.com/og-image.jpg" />
   
-  <!-- Favicons e Ícones - Configuração Otimizada -->
+  <!-- Favicons e Ícones -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="alternate icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="/favicon.svg">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/favicon.svg" color="#0a2540">
   
