--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://lojarapidamz.com/og-image.jpg" />
   
-  <!-- Favicons e Ícones -->
+  <!-- Favicon (Apenas SVG para garantir carregamento) -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/favicon.svg">
-  <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/favicon.svg" color="#0a2540">
+  <link rel="manifest" href="/site.webmanifest">
   
   <meta name="msapplication-TileColor" content="#0a2540">
   <meta name="theme-color" content="#ffffff">
