--- a/index.html
+++ b/index.html
@@ -3,52 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Identidade Principal e SEO -->
   <title>LojaRápida - O Marketplace de Moçambique | Compre e Venda Online</title>
   <meta name="description" content="LojaRápida é o maior marketplace de Moçambique. Compre e venda produtos em todo o país. Entrega rápida, pagamento seguro e as melhores ofertas em Maputo, Matola, Beira e mais." />
-  <meta name="keywords" content="marketplace Moçambique, comprar online Maputo, vender online Moçambique, LojaRápida, e-commerce Moçambique, shopping online Maputo" />
+  <meta name="keywords" content="marketplace Moçambique, comprar online Maputo, vender online Moçambique, LojaRápida, e-commerce Moçambique, shopping online Maputo, pagamento na entrega" />
   <meta name="author" content="LojaRápida" />
-  <meta name="robots" content="index, follow" />
+  <meta name="robots" content="index, follow, max-image-preview:large" />
   
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZ38C7MF5P"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-DZ38C7MF5P');
-  </script>
+  <!-- Configuração de Favicon (Correção do Globo) -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="apple-touch-icon" href="/favicon.svg">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="theme-color" content="#0a2540">
   
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:title" content="LojaRápida - O Marketplace de Moçambique" />
   <meta property="og:description" content="Compre e venda com segurança. Entrega rápida e pagamento na entrega em todo Moçambique." />
   <meta property="og:image" content="https://lojarapidamz.com/og-image.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lojarapidamz.com" />
+  <meta property="og:site_name" content="LojaRápida" />
+  <meta property="og:locale" content="pt_MZ" />
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://lojarapidamz.com/og-image.jpg" />
   
-  <!-- Favicon (Apenas SVG para garantir carregamento) -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="mask-icon" href="/favicon.svg" color="#0a2540">
-  <link rel="manifest" href="/site.webmanifest">
-  
-  <meta name="msapplication-TileColor" content="#0a2540">
-  <meta name="theme-color" content="#ffffff">
-  
-  <!-- Geolocation -->
-  <meta name="geo.region" content="MZ" />
-  <meta name="geo.placename" content="Maputo" />
-  <meta name="geo.position" content="-25.9692;32.5732" />
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZ38C7MF5P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-DZ38C7MF5P');
+  </script>
 
-  <!-- Otimização de Carregamento de CSS -->
-  <link rel="preload" href="/src/globals.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="/src/globals.css"></noscript>
-  
-  <!-- Otimização de Conexão -->
+  <!-- Otimização de Carregamento -->
   <link rel="preconnect" href="https://bpzqdwpkwlwflrcwcrqp.supabase.co">
+  <link rel="dns-prefetch" href="https://bpzqdwpkwlwflrcwcrqp.supabase.co">
 </head>
 
 <body>
