--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <meta name="author" content="LojaRápida" />
   <meta name="robots" content="index, follow, max-image-preview:large" />
   
-  <!-- Configuração de Favicon (Correção do Globo) -->
+  <!-- Configuração de Favicon (Correção de Compatibilidade) -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> <!-- NOVO: Fallback PNG -->
   <link rel="apple-touch-icon" href="/favicon.svg">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="theme-color" content="#0a2540">
