--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
   <meta name="author" content="LojaRápida" />
   <meta name="robots" content="index, follow, max-image-preview:large" />
   
-  <!-- Configuração de Favicon (Correção de Compatibilidade) -->
+  <!-- Favicon para Google SERP e Navegadores -->
+  <!-- O Google prioriza ícones de alta resolução e quadrados -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> <!-- NOVO: Fallback PNG -->
-  <link rel="apple-touch-icon" href="/favicon.svg">
+  
+  <!-- Ícone para Apple/iOS e atalhos Desktop -->
+  <link rel="apple-touch-icon" sizes="192x192" href="/favicon-192x192.png">
+  
   <link rel="manifest" href="/site.webmanifest">
   <meta name="theme-color" content="#0a2540">
   
